--- a/index.html
+++ b/index.html
@@ -87,6 +87,6 @@
                 </div>
             </div>
         </main>
-        <footer>©Copyright 2024 Ajiepradana Al-Kautsar</footer>
+        <footer>©2024 Ajiepradana Al-Kautsar</footer>
     </body>
 </html>
